Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96240

Views are not blurred

XMLWordPrintable

    • Linux/X11, macOS, Windows
    • 378ff29b29d597fb9d4316be1da35402fefd33de (qt/qtbase/dev) ea3ede9c45748aa8bc1dee572be2570f83fbcb95 35762161d3a91728ec1abd44b15f04619a725af3 d7d33c5892ff1fb1e64a6ddc279f7f56927d2c2f 726f935b51751a86936c331f0c00e97462662bc1 f351838d656efde102d88a8a9f034eb4d

      If you put a QListView or some other item view like ListWidget, TreeWidget, TableWidget, or ColumnView in a QMainWindow and add a blur effect on it the mainwindow is blurred, but the item view as a child is not. It is expected that the child is blurred as well.

      If you resize the the mainwindow with mouse while the blur effect is active then the effect is applied to the QListView as well.

      To reproduce please run the attached example. 

        1. qtbug_96240.zip
          3 kB
          Tuomas Vaarala
        2. effect.png
          93 kB
          Alan Fan
        3. video.mp4
          3.91 MB
          Alan Fan
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            anmaatta Antti Määttä
            tuomas.vaarala Tuomas Vaarala
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: