Calculate effect bounds when drawing widget graphics effect

Calculate effect bounds for the updated region when drawing the effect
so that the whole affected area gets updated. The effect bounds have
already been added to the region so it doesn't need to be handled in
the drawing function.

Fixes: QTBUG-96240
Change-Id: I0c317311622e6299fb1a3015541408d1d83c93de
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit ea3ede9c45748aa8bc1dee572be2570f83fbcb95)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>